--- a/index.Rmd
+++ b/index.Rmd
@@ -13,7 +13,7 @@ bibliography: references.bib
 [Lab 1](Lab1revised_bal.html)
 
 [Lab 2](lab2_bal.html)
-[Lab 3](Lab3A.html)
+[Lab 3A](Lab3A.html)
 
 Application written in R [@RCoreTeam] 
 
