Added second  half of Lab3B

--- a/Lab3B.Rmd
+++ b/Lab3B.Rmd
@@ -90,3 +90,137 @@ surveys_hindfoot_cm <- surveys %>%
 
 ```
 
+### Split-apply-combine
+```{r}
+surveys %>%
+  group_by(sex, species_id) %>%
+  summarize(mean_weight = mean(weight),
+            min_weight = min(weight)) %>%
+  arrange(desc(min_weight))
+
+```
+
+### Counting
+```{r}
+surveys %>%
+count(sex, species) %>%
+arrange(species, desc(n))
+```
+
+### Challenge
+
+#1
+```{r}
+surveys %>%
+  count(plot_type)
+```
+# 2
+```{r}
+surveys %>%
+  filter(!is.na(hindfoot_length)) %>%
+  group_by(species_id) %>%
+  summarize(
+    mean_hindfoot_length = mean(hindfoot_length),
+    min_hindfoot_length = min(hindfoot_length),
+    max_hindfoot_length = min(hindfoot_length),
+    n = n()
+    )
+```
+
+# 3
+```{r}
+surveys %>%
+  filter(!is.na(weight)) %>%
+  group_by(year) %>%
+  filter(weight == max(weight)) %>%
+  select(year, genus, species, weight) %>%
+  arrange(year)
+
+```
+
+
+### Reshaping with gather and spread
+```{r}
+surveys_gw <- surveys %>%
+  filter(!is.na(weight)) %>%
+  group_by(plot_id, genus) %>%
+  summarize(mean_weight = mean(weight))
+
+```
+```{r}
+surveys_spread <- surveys_gw %>%
+  spread(key = genus, value = mean_weight)
+str(surveys_spread)
+```
+
+
+```{r}
+surveys_gw %>%
+  spread(genus, mean_weight, fill = 0) %>%
+  head()
+```
+
+### Gathering
+```{r}
+surveys_gather <- surveys_spread %>%
+  gather(key = "genus", value = "mean_weight", -plot_id)
+str(surveys_gather)
+```
+
+```{r}
+surveys_spread %>%
+  gather(key = "genus", value = "mean_weight", Baiomys:Spermophilus) %>%
+  head()
+```
+### Challenge
+
+# 1
+```{r}
+surveys_spread_genera <- surveys %>%
+  group_by(plot_id, year) %>%
+  summarize(n_genera = n_distinct(genus)) %>%
+  spread(year, n_genera)
+head(surveys_spread_genera)
+```
+# 2
+```{r}
+surveys_spread_genera %>%
+  gather("year", "n_genera", -plot_id)
+```
+# 3
+```{r}
+surveys_long <- surveys %>%
+  gather("measurement", "value", hindfoot_length, weight)
+```
+# 4
+```{r}
+surveys_long %>%
+  group_by(year, measurement, plot_type) %>%
+  summarize(mean_value = mean(value, na.rm=TRUE)) %>%
+  spread(measurement, mean_value)
+```
+
+### Exporting data
+```{r}
+surveys_complete <- surveys %>%
+  filter(!is.na(weight),           
+         !is.na(hindfoot_length),  
+         !is.na(sex))                
+```
+
+```{r}
+
+species_counts <- surveys_complete %>%
+    count(species_id) %>% 
+    filter(n >= 50)
+
+
+surveys_complete <- surveys_complete %>%
+  filter(species_id %in% species_counts$species_id)
+dim(surveys_complete)
+```
+
+```{r}
+write_csv(surveys_complete, path = "data/surveys_complete.csv")
+```
+
