--- a/Lab4B.Rmd
+++ b/Lab4B.Rmd
@@ -16,7 +16,7 @@ library(DT)
 report_09_13_2020 <- read_csv(url("https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_daily_reports/09-13-2020.csv")) 
 ```
 
-```{r}
+```{r, eval = FALSE}
 str(report_09_13_2020)
 datatable(report_09_13_2020)
 
@@ -26,20 +26,15 @@ datatable(report_09_13_2020)
 # Deaths of Top 10 Countries September 13, 2020
 ```{r}
 top10d <- report_09_13_2020 %>%
-  filter(Country_Region == "US") %>% 
-  group_by(Province_State) %>%
+  group_by(Country_Region) %>%
   summarize(Confirmed = sum(Confirmed), Deaths = sum(Deaths), min_Deaths = min(Deaths)) %>%
   arrange(desc(min_Deaths)) %>%
   slice(1:10)
 
-
-ggplot(data = top10d, mapping = aes(x = Province_State, y = Deaths)) + geom_point()
-
-
+ggplot(data = top10d, mapping = aes(x = Country_Region, y = Deaths)) + geom_point()
 ```
 
 # Confirmed Cases of Top 10 Countries September 13, 2020
-
 ```{r}
 top10d <- report_09_13_2020 %>%
   group_by(Country_Region) %>%
@@ -52,24 +47,32 @@ ggplot(data = top10d, mapping = aes(x = Country_Region, y = Confirmed)) + geom_p
 
 # Deaths for Top 10 States September 13, 2020
 ```{r}
-top10d <- report_09_13_2020 %>% 
+top10d <- report_09_13_2020 %>%
   filter(Country_Region == "US") %>% 
-  group_by(Province_State) %>% 
-  summarize(Confirmed= sum(Confirmed), Deaths = sum(Deaths), min_Deaths = min(Deaths)) %>%
+  group_by(Province_State) %>%
+  summarize(Confirmed = sum(Confirmed), Deaths = sum(Deaths), min_Deaths = min(Deaths)) %>%
   arrange(desc(min_Deaths)) %>%
   slice(1:10)
 
-ggplot(data = top10d, mapping = aes(x = Deaths, y = Province_State)) + geom_bar(stat = "identity")
+
+ggplot(data = top10d, mapping = aes(x = Deaths, y = Province_State))+ geom_bar(stat = "identity")
+
+
 ```
+
 
 # Confirmed Cases for Top 10 States September 13, 2020
 ```{r}
-top10d <- report_09_13_2020 %>% 
+top10d <- report_09_13_2020 %>%
   filter(Country_Region == "US") %>% 
-  group_by(Province_State) %>% 
-  summarize(Confirmed= sum(Confirmed), Deaths = sum(Deaths), min_Deaths = min(Deaths)) %>%
+  group_by(Province_State) %>%
+  summarize(Confirmed = sum(Confirmed), Deaths = sum(Deaths), min_Deaths = min(Deaths)) %>%
   arrange(desc(min_Deaths)) %>%
   slice(1:10)
 
-ggplot(data = top10d, mapping = aes(x = Confirmed, y = Province_State)) + geom_bar(stat = "identity")
+
+ggplot(data = top10d, mapping = aes(x = Confirmed, y = Province_State))+ geom_bar(stat = "identity")
+
+
 ```
+
