Added link to lab 12

--- a/index.Rmd
+++ b/index.Rmd
@@ -52,6 +52,8 @@ bibliography: Data/References.bib
 
 [Lab 11 Extra](lab11E.html)
 
+[Lab 12](Lab12.html)
+
 
 Application written in R [@RCoreTeam] 
 
