--- a/Lab12.Rmd
+++ b/Lab12.Rmd
@@ -13,3 +13,15 @@ knitr::opts_chunk$set(echo = TRUE)
 ### Data Visualization Tutorial in Cytoscape
 
 [Final Graph](datavistutorial.png)
+
+### Differentially Expressed Genes
+
+
+
+  
+```{r}
+data <-   read_csv(url("https://raw.githubusercontent.com/blinnehan30/genomics-course/master/TCGA-Ovarian-MesenvsImmuno-data-up.csv"))
+head(data)
+```
+  
+  
